--- a/app/src/main/res/layout/home.xml
+++ b/app/src/main/res/layout/home.xml
@@ -22,11 +22,16 @@
             android:layout_marginBottom="16dp"
             android:src="@drawable/ic_add" />
 
-
         <include
             android:id="@+id/download"
             layout="@layout/item_download"/>
 
+<!--        <androidx.recyclerview.widget.RecyclerView-->
+<!--            android:id="@+id/rv_tasks"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            tools:itemCount="6"-->
+<!--            tools:listitem="@layout/item_download"/>-->
 
 
 
