--- a/app/src/main/res/layout/item_download.xml
+++ b/app/src/main/res/layout/item_download.xml
@@ -15,7 +15,9 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="2dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginTop="5dp"
             android:background="@drawable/border_black">
 
             <ProgressBar
@@ -26,7 +28,8 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
-                android:progressTint="@color/teal_200" />
+                android:progressTint="@color/teal_200"
+                tools:progress="10" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -36,28 +39,29 @@
 
                 <TextView
                     android:id="@+id/progressStatus"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="5dp"
-                    android:layout_weight="1"
+                    android:layout_weight="1.4"
+                    tools:text="10Mb/100Mb  10%"
                     android:textAlignment="center" />
 
                 <Button
                     android:id="@+id/btnCancel"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="4dp"
-                    android:layout_weight="1"
+                    android:layout_weight="0.8"
                     android:enabled="false"
                     android:text="@string/cancel" />
 
                 <Button
                     android:id="@+id/btnStart"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="4dp"
-                    android:layout_weight="1"
+                    android:layout_weight="0.8"
                     android:text="@string/start" />
             </LinearLayout>
         </RelativeLayout>
